--- a/index.css
+++ b/index.css
@@ -41,10 +41,11 @@ header .container {
 
 header .row {
     align-items: center;
+    justify-content: start;
 }
 
 header .column-left {
-    flex-basis: 30%;
+    flex-basis: 25%;
 }
 
 header .column-right {
@@ -53,11 +54,13 @@ header .column-right {
 }
 
 header .column figure {
+    display: flex;
+    justify-content: center;
     max-width: 100%;
 }
 
 header .column img {
-    width: 100%;
+    width: 85%;
 }
 
 header .column h1 {
@@ -372,11 +375,5 @@ label span {
 
     label .dkm {
         display: inline-block;
-    }
-}
-
-@media only screen and (min-width: 991px) {
-    header .column-right {
-        flex-basis: 70%;
     }
 }
