Att PDF e formatações

--- a/index.css
+++ b/index.css
@@ -1,379 +1,377 @@
 :root {
-    --backgroundPrimario: #45dbfc;
-    --backgroundSecundario: #04133d;
-    --colorText: #636363;
-    --colorText2: #000;
-    --backgroundDark: #1c1c1c;
-    --borderFrame: #c2c2c2;
+  --backgroundPrimario: #45dbfc;
+  --backgroundSecundario: #04133d;
+  --colorText: #636363;
+  --colorText2: #000;
+  --backgroundDark: #1c1c1c;
+  --borderFrame: #c2c2c2;
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    list-style: none;
-    text-decoration: none;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
 }
 
 /* Estilos gerais */
 .column {
-    flex-basis: 49%;
+  flex-basis: 49%;
 }
 
 .hidden {
-    display: none;
+  display: none;
 }
 
 /* BODY */
 body {
-    font-family: 'roboto';
+  font-family: "roboto";
 }
 
 /* HEADER */
 header {
-    background: var(--backgroundPrimario);
-    padding: 30px 30px 0;
+  background: var(--backgroundPrimario);
+  padding: 30px 30px 0;
 }
 
 header .container {
-    background: white;
+  background: white;
 }
 
 header .row {
-    align-items: center;
-    justify-content: start;
+  align-items: center;
+  justify-content: start;
 }
 
 header .column-left {
-    flex-basis: 25%;
+  flex-basis: 25%;
 }
 
 header .column-right {
-    flex-basis: 60%;
-    text-align: center;
+  flex-basis: 60%;
+  text-align: center;
 }
 
 header .column figure {
-    display: flex;
-    justify-content: center;
-    max-width: 100%;
+  display: flex;
+  justify-content: center;
+  max-width: 100%;
 }
 
 header .column img {
-    width: 85%;
+  width: 85%;
 }
 
 header .column h1 {
-    font-size: 1.5rem;
-    color: var(--colorText2);
+  font-size: 1.5rem;
+  color: var(--colorText2);
 }
 
 header .column p {
-    font-size: 1rem;
-    color: var(--colorText);
+  font-size: 1rem;
+  color: var(--colorText);
 }
 
 header .column ul {
-    margin: 16px 0 0;
+  margin: 16px 0 0;
 }
 
-header .column ul li{
-    padding: 0 0 10px;
+header .column ul li {
+  padding: 0 0 10px;
 }
 
 header .column ul li a {
-    font-size: 1rem;
-    color: var(--colorText2);
+  font-size: 1rem;
+  color: var(--colorText2);
 }
 
 /* FOOTER */
 footer {
-    background: var(--backgroundSecundario);
+  background: var(--backgroundSecundario);
 }
 
 footer .container {
-    padding: 20px;
+  padding: 20px;
 }
 
 footer nav ul li a {
-    color: white;
+  color: white;
 }
 
 footer .info li {
-    margin: 0 0 15px;
+  margin: 0 0 15px;
 }
 
 footer nav .social-links {
-    border-top: 1px solid rgba(255, 255, 255, 20%);
-    margin: 20px 0;
-    padding: 40px 0 0;
-    text-align: center;
+  border-top: 1px solid rgba(255, 255, 255, 20%);
+  margin: 20px 0;
+  padding: 40px 0 0;
+  text-align: center;
 }
 
 footer nav .social-links li {
-    margin: 10px 20px;
-    text-align: center;
-    display: inline-block;
+  margin: 10px 20px;
+  text-align: center;
+  display: inline-block;
 }
 
 footer nav .social-links li a img {
-    width: 40px;
+  width: 40px;
 }
 
 /* PÁGINA INICIAL */
 main .column {
-    padding: 0 20px 20px;
+  padding: 0 20px 20px;
 }
 
 main .column-left {
-    padding-bottom: 0;
+  padding-bottom: 0;
 }
 
 main .column section {
-    border-bottom: 1px solid #d4e9ff;
-    margin: 0 0 20px;
-    padding: 15px 0;
-    min-height: 145px;
-    color: var(--colorText2);
+  border-bottom: 1px solid #d4e9ff;
+  margin: 0 0 20px;
+  padding: 15px 0;
+  min-height: 145px;
+  color: var(--colorText2);
 }
 
 main .column section h2 {
-    font-size: 1.3rem;
-    margin: 0 0 15px;
+  font-size: 1.3rem;
 }
 
 main .column section p {
-    font-size: 0.9rem;
-    color: var(--colorText);
-    line-height: 1.5rem;
+  font-size: 1rem;
+  color: var(--colorText);
+  line-height: 1.5rem;
 }
 
 main .column section ul li {
-    margin: 0 0 10px;
+  margin-top: 15px;
 }
 
 main .column section ol li {
-    margin: 10px 0 0;
+  margin: 10px 0 0;
 }
 
 main .column section ol > li:nth-of-type(1) {
-    margin: 5px 0 0;
+  margin: 5px 0 0;
 }
 
 main .column section ol ul li {
-    margin: 0;
-    list-style: disc;
-    list-style-position: inside;
+  margin: 0;
+  list-style: disc;
+  list-style-position: inside;
 }
 
 main .column section ol ul li p {
-    display: inline;
+  display: inline;
 }
 
 main .column section ul li strong {
-    font-size: 0.9rem;
-    font-weight: 700;
-    margin: 5px 0 10px;
-    display: inline-block;
+  font-size: 1.2rem;
+  font-weight: 700;
+  margin-bottom: 5px;
+  display: inline-block;
 }
 
 /* EXTRAS */
 .on-dark {
-    width: 50px;
-    height: 50px;
-    display: none;
+  width: 50px;
+  height: 50px;
+  display: none;
 }
 
 header .container {
-    position: relative;
+  position: relative;
 }
 
 label {
-    position: fixed;
-    right: 15px;
-    bottom: 15px;
-    width: 60px;
-    height: 30px;
-    background: black;
-    transition: 2s;
-    border-radius: 20px;
-    padding: 5px;
-    cursor: pointer;
+  position: fixed;
+  right: 15px;
+  bottom: 15px;
+  width: 60px;
+  height: 30px;
+  background: black;
+  transition: 2s;
+  border-radius: 20px;
+  padding: 5px;
+  cursor: pointer;
 }
 
 label .dkm {
-    display: none;
-    position: absolute;
+  display: none;
+  position: absolute;
 }
 
 label .dkm1 {
-    top: 5px;
-    right: 65px;
-    color: var(--backgroundDark);
+  top: 5px;
+  right: 65px;
+  color: var(--backgroundDark);
 }
 
 label .dkm2 {
-    top: 5px;
-    right: -55px;
-    color: white;
+  top: 5px;
+  right: -55px;
+  color: white;
 }
 
 label span {
-    width: 20px;
-    height: 20px;
-    display: block;
-    background-color: #d4e9ff;
-    border-radius: 100%;
-    transition: all ease 1s;
+  width: 20px;
+  height: 20px;
+  display: block;
+  background-color: #d4e9ff;
+  border-radius: 100%;
+  transition: all ease 1s;
 }
 
 .on-dark:checked ~ .dark-mode label {
-    background-color: #ffffff;
+  background-color: #ffffff;
 }
 
 .on-dark:checked ~ .dark-mode label span {
-    background-color: var(--backgroundSecundario);
-    transition: all ease 1s;
-    transform: translateX(30px);
+  background-color: var(--backgroundSecundario);
+  transition: all ease 1s;
+  transform: translateX(30px);
 }
 
 .on-dark:checked ~ .dark-mode {
-    --backgroundPrimario: #000;
-    --backgroundSecundario: #000;
-    --colorText: #636363;
-    --colorText2: #fff;
+  --backgroundPrimario: #000;
+  --backgroundSecundario: #000;
+  --colorText: #a7a7a7;
+  --colorText2: #fff;
 }
 
 .on-dark:checked ~ .dark-mode header {
-    background-color: var(--backgroundSecundario);
+  background-color: var(--backgroundSecundario);
 }
 
 .on-dark:checked ~ .dark-mode header .container {
-    background-color: var(--backgroundDark);
+  background-color: var(--backgroundDark);
 }
 
 .on-dark:checked ~ .dark-mode .container {
-    background-color: var(--backgroundDark);
+  background-color: var(--backgroundDark);
 }
 
 .on-dark:checked ~ .dark-mode main {
-    background-color: var(--backgroundSecundario);
+  background-color: var(--backgroundSecundario);
 }
 
 @keyframes aumentarLargura {
-    from {
-        width: 0;
-    }
-    to {
-        width: 100%;
-    }
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
 }
 
 @keyframes aumentarAltura {
-    from {
-        height: 0;
-    }
-    to {
-        height: 100%;
-    }
+  from {
+    height: 0;
+  }
+  to {
+    height: 100%;
+  }
 }
 
 /* MEDIA */
 @media only screen and (min-width: 768px) {
-    .row {
-        display: flex;
-        flex-wrap: wrap;
-        align-items: flex-start;
-        justify-content: space-between;
-    }
+  .row {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
 
-    footer nav .social-links {
-        display: flex;
-        justify-content: center;
-    }
+  footer nav .social-links {
+    display: flex;
+    justify-content: center;
+  }
 
-    header {
-        padding: 30px 0 0;
-    }
+  header {
+    padding: 30px 0 0;
+  }
 
-    header .column img {
-        max-width: 250px;
-        border-radius: 100%;
-    }
+  header .column img {
+    max-width: 250px;
+    border-radius: 100%;
+  }
 
-    .container {
-        width: 100%;
-        max-width: 1125px;
-        margin: 0 auto;
-        padding: 30px;
-    }
+  .container {
+    width: 100%;
+    max-width: 1125px;
+    margin: 0 auto;
+    padding: 30px;
+  }
 
-    main .column-left section:nth-of-type(2) ul li {
-        display: inline-block;
-        width: 49%;
-    }
-    
-    header .column-right {
-        text-align: left;
-    }
+  main .column-left section:nth-of-type(2) ul li {
+    display: inline-block;
+    width: 49%;
+  }
 
-    main .column section{
-        /* border: 2px solid #d4e9ff; */
-        border: 2px solid transparent;
-        padding: 20px;
-        position: relative;
-    }
+  header .column-right {
+    text-align: left;
+  }
 
-    main .column section span {
-        position: absolute;
-        display: block;
-        width: 0;
-        height: 0;
-        border: 2px solid transparent;
-    }
+  main .column section {
+    border: 2px solid transparent;
+    padding: 20px;
+    position: relative;
+  }
 
-    main .column section .top-right {
-        top: 0;
-        left: 0;
-        animation-name: aumentarLargura, aumentarAltura;
-        animation-duration: 1.25s, 1.25s;
-        animation-delay: 2s, 3s;
-        animation-fill-mode: forwards;
-        border-top-color: var(--borderFrame);
-        border-right-color: var(--borderFrame);
-    }
+  main .column section span {
+    position: absolute;
+    display: block;
+    width: 0;
+    height: 0;
+    border: 2px solid transparent;
+  }
 
-    main .column section .bottom-left {
-        bottom: 0;
-        right: 0;
-        animation-name: aumentarLargura, aumentarAltura;
-        animation-duration: 1.25s, 1.25s;
-        animation-delay: 4s, 5s;
-        animation-fill-mode: forwards;
-        border-bottom-color: var(--borderFrame);
-        border-left-color: var(--borderFrame);
-    }
+  main .column section .top-right {
+    top: 0;
+    left: 0;
+    animation-name: aumentarLargura, aumentarAltura;
+    animation-duration: 1.25s, 1.25s;
+    animation-delay: 2s, 3s;
+    animation-fill-mode: forwards;
+    border-top-color: var(--borderFrame);
+    border-right-color: var(--borderFrame);
+  }
 
-    main .column {
-        padding: 0;
-    }
-    
-    footer nav .social-links li {
-        margin: 0 10px;
-        display: initial;
-    }
+  main .column section .bottom-left {
+    bottom: 0;
+    right: 0;
+    animation-name: aumentarLargura, aumentarAltura;
+    animation-duration: 1.25s, 1.25s;
+    animation-delay: 4s, 5s;
+    animation-fill-mode: forwards;
+    border-bottom-color: var(--borderFrame);
+    border-left-color: var(--borderFrame);
+  }
 
-    footer nav .social-links li a:hover img {
-        width: 45px;
-    }
+  main .column {
+    padding: 0;
+  }
 
-    label {
-        position: absolute;
-        top: 30px;
-        right: 70px;
-    }
+  footer nav .social-links li {
+    margin: 0 10px;
+    display: initial;
+  }
 
-    label .dkm {
-        display: inline-block;
-    }
+  footer nav .social-links li a:hover img {
+    width: 45px;
+  }
+
+  label {
+    position: absolute;
+    top: 30px;
+    right: 70px;
+  }
+
+  label .dkm {
+    display: inline-block;
+  }
 }
